[JAVA-40682] Moved article "How to Mock Environment Variables in Unit Tests" from testing-libraries-2 to testing-libraries